--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,9 +7,9 @@ phases:
     commands:
       - npm install time
       - export BUCKET=n-codepipeline-bucket
-      - aws cloudformation package --template-file template.yml --s3-bucket $BUCKET --output-template-file outputtemplate.yml
+      - aws cloudformation package --template-file template.yml --s3-bucket $BUCKET 
 artifacts:
   type: zip
   files:
     - template.yml
-    - outputtemplate.yml
+    
