--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,8 @@
 version: 0.2
 phases:
   install:
-    runtime-versions:
-        nodejs: 10
+    commands:
+      - pip install -r requirements.txt -t lib
   build:
     commands:
       - npm install time
