adding output template file to the buildspec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,9 +6,10 @@ phases:
   build:
     commands:
       - export BUCKET=n-codepipeline-bucket
-      - aws cloudformation package --template-file template.yml --s3-bucket $BUCKET 
+      - aws cloudformation package --template-file template.yml --s3-bucket $BUCKET  --output-template-file outputtemplate.yml
 artifacts:
   type: zip
   files:
     - template.yml
+    - outputtemplate.yml
     
