--- a/template.yml
+++ b/template.yml
@@ -1,9 +1,7 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: >
-  sam-python-hello-world
-
-  Sample SAM Template for sam-python-hello-world
+  Sample SAM Template for sam-python-hello-world going thru codepipeline
 
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
